Complete validated Ask AI citation builder (Task 5.5)
Enforce trustworthy citation metadata, confidence, excerpts, and deep links while failing closed on ungrounded model responses.

Co-authored-by: Cursor <cursoragent@cursor.com>